Added ResourceHolder and use it in REvoGame(SoundBuffers & Textures)

--- a/smth_with_phisycs/smth_with_phisycs.vcxproj
+++ b/smth_with_phisycs/smth_with_phisycs.vcxproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <ClInclude Include="BasementGame.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="ResourceHolder.h" />
     <ClInclude Include="RevoGame.h" />
     <ClInclude Include="Saper.h" />
     <ClInclude Include="Tetrys.h" />
