--- a/smth_with_phisycs/smth_with_phisycs.vcxproj.filters
+++ b/smth_with_phisycs/smth_with_phisycs.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Tetrys.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ResourceHolder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
