Start of creating a new game "SaveAFriend": - Create .cpp, .h files - Create additional classes RenderObject, ObjectHolder - Create a simple redactor of landscape with remembering objects position

--- a/smth_with_phisycs/smth_with_phisycs.vcxproj.filters
+++ b/smth_with_phisycs/smth_with_phisycs.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Tetrys.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SaveAFriendGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -53,5 +56,19 @@
     <ClInclude Include="ResourceHolder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RenderObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectsHolder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SaveAFriendGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Positions.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
