--- a/smth_with_phisycs/smth_with_phisycs.vcxproj
+++ b/smth_with_phisycs/smth_with_phisycs.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>D:\learning c++\SFML-2.6.0\include;</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,15 +136,22 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RevoGame.cpp" />
     <ClCompile Include="Saper.cpp" />
+    <ClCompile Include="SaveAFriendGame.cpp" />
     <ClCompile Include="Tetrys.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasementGame.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="ObjectsHolder.h" />
+    <ClInclude Include="RenderObject.h" />
     <ClInclude Include="ResourceHolder.h" />
     <ClInclude Include="RevoGame.h" />
     <ClInclude Include="Saper.h" />
+    <ClInclude Include="SaveAFriendGame.h" />
     <ClInclude Include="Tetrys.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Positions.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
